GORA-536: Avoid calling Class#newInstance
When using reflexion use getDeclaredConstructor().newInstance()
instead of Class::newInstance because it may throw undeclared checked
exceptions.