@@ -166,7 +166,7 @@ public class CassandraStore<K, T extends Persistent> implements DataStore<K, T> 
       if (beanFactory != null) {
         return beanFactory.newKey();
       } else {
-        return keyClass.newInstance();
+        return keyClass.getDeclaredConstructor().newInstance();
       }
     } catch (Exception e) {
       throw new GoraException("Error while instantiating a key: " + e.getMessage(), e);
@@ -183,7 +183,7 @@ public class CassandraStore<K, T extends Persistent> implements DataStore<K, T> 
       if (beanFactory != null) {
         return this.beanFactory.newPersistent();
       } else {
-        return persistentClass.newInstance();
+        return persistentClass.getDeclaredConstructor().newInstance();
       }
     } catch (Exception e) {
       throw new GoraException("Error while instantiating a key: " + e.getMessage(), e);
